add Service Close Swagger
